--- a/postgresql.org
+++ b/postgresql.org
@@ -31,6 +31,7 @@ Next line O is an 'Oh' not a Zero.
 
 * Daily Commands
 | psql -l                             | list all databases             |
+| \d+ <tablename>                     | describe table                 |
 | % psql <dbname>                     | login to psql with <dbname> DB |
 | \c <db>                             | connect to <db>                |
 | \du                                 | display users                  |
