--- a/arch-install-notes.org
+++ b/arch-install-notes.org
@@ -135,6 +135,8 @@ ln -s .zshrc-lenovo .zshrc
 Once computer is connected do:
 
 #+BEGIN_SRC 
+git config --global user.email "fenton.travers@gmail.com"
+git config --global user.name "Fenton Travers"
 git clone git@github.com:ftravers/home-dir.git
 cd home-dir
 cp * .* ..
@@ -143,6 +145,13 @@ cp * .* ..
 Fire up emacs and see that it downloads and installs all the packages
 it needs.
 
+* Xresources
+
+  Pick which .Xresources to use.
+
+: ln -s .Xresources-* .Xresources
+
+sudo pacman -S xcape autocutsel conky
 
 * powerline fonts
 to have a nice terminal prompt follow:
